Game and refactoring